plugins {
    id 'java'
    // [핵심 수정] 최신 Gradle(8.x~9.x)과 호환되는 최신 버전으로 업그레이드
    id 'org.springframework.boot' version '3.3.2'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.myide'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // 1. 웹 & 소켓
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'

    // 2. 유효성 검증
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // 3. 도커 제어 (Java 17 호환)
    implementation 'com.github.docker-java:docker-java:3.3.4'
    implementation 'com.github.docker-java:docker-java-transport-httpclient5:3.3.4'
    implementation 'org.apache.httpcomponents.client5:httpclient5:5.2.1'

    // 4. 데이터베이스 & JPA
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    runtimeOnly 'com.h2database:h2'

    // 5. 롬복
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // 6. 테스트
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    // [런타임 에러 방지] JAXB 호환성 라이브러리 (그대로 유지)
    implementation 'javax.xml.bind:jaxb-api:2.3.1'
    implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.1'
    implementation 'javax.activation:activation:1.1.1'

    implementation 'org.apache.commons:commons-compress:1.26.0' // [필수] 도커 파일 복사용
}

tasks.named('test') {
    useJUnitPlatform()
}